--- a/Views/aluno/listar.phtml
+++ b/Views/aluno/listar.phtml
@@ -4,7 +4,7 @@
     <div class="mt-2">
         <a href="/alunos/novo" class="btn btn-outline-dark btn-sm">Novo Aluno</a>
 
-        <a href="/alunos/relatorio" class="btn btn-outline-dark btn-sm">Gerar PDF</a
+        <a href="/alunos/relatorio" target="_blank" class="btn btn-outline-dark btn-sm">Gerar PDF</a>
     </div>
 
     <table class="table table-striped table-hover mt-4">
