--- a/Views/template/menu.phtml
+++ b/Views/template/menu.phtml
@@ -7,10 +7,13 @@
         <a href="/professores/listar" class="btn btn-outline-dark">Professor</a>
 
         <a href="/cursos/listar" class="btn btn-outline-dark">Cursos</a> 
+
+        <a href="/usuarios/listar" class="btn btn-outline-dark">Usuários</a> 
     </div>
 
     <div class="text-end">
-        <a href="/logout" class="btn btn-outline-danger">Desconectar</a>
+        Bem vinde <?php echo App\Security\UserSecurity::getUser()->name; ?>
+        <a href="/desconectar" class="btn btn-outline-danger">Desconectar</a>
     </div>
 </nav>
 
