--- a/Views/auth/login.phtml
+++ b/Views/auth/login.phtml
@@ -3,12 +3,13 @@
         <div class="card card-body">
             <form action="" method="post">
                 <input name="email" type="email" placeholder="Email" class="form-control form-control-lg mb-3">
-                <input name="password" type="senha" placeholder="Senha" class="form-control form-control-lg mb-3">
+
+                <input name="password" type="password" placeholder="Senha" class="form-control form-control-lg mb-3">
 
                 <div class="d-grid">
                     <button class="btn btn-dark btn-lg">ENTRAR</button>
                 </div>
-
+            </form>
         </div>
     </div>
-    </section>
+</section>
