--- a/Views/aluno/editar.phtml
+++ b/Views/aluno/editar.phtml
@@ -1,28 +1,31 @@
-<?php 
+<?php
     $aluno = $dados[0];
 ?>
-<section class="mt-3 card card-body">
-    <h1>Editar Aluno</h1>
+
+<section class="card card-body">
+    <h1>Editar aluno</h1>
 
     <div class="row">
         <div class="col">
             <form action="" method="POST">
-                <label for="nome">Nome</label>
+                <label for="nome">Nome: </label>
                 <input name="nome" type="text" id="nome" class="form-control mb-3" value="<?php echo $aluno->nome; ?>">
-
-                <label for="email">Email</label>
+                <label for="cpf">CPF: </label>
+                <input name="cpf" type="text" id="cpf" class="form-control mb-3" minlength="11" maxlength="11" value="<?php echo $aluno->cpf; ?>">
+                <label for="email">E-mail:</label>
                 <input name="email" type="text" id="email" class="form-control mb-3" value="<?php echo $aluno->email; ?>">
+                <label for="genero">Genero: </label>
+                <select name="genero" id="genero" class="form-select mb-3" required>
+                    <option disabled><?php echo $aluno->genero; ?></option>
+                    <option>Masculino</option>
+                    <option>Feminino</option>
+                    <option>Prefiro não responder</option>
+                    <option>Outros</outros>
+                </select>
+                <label for="dataNascimento">Data de Nascimento: </label>
+                <input name="dataNascimento" type="date" id="dataNascimento" class="form-control mb-3" value="<?php echo $aluno->dataNascimento; ?>">
 
-                <label for="cpf">CPF</label>
-                <input name="cpf" type="text" id="cpf" class="form-control mb-3" value="<?php echo $aluno->cpf; ?>">
-
-                <label for="nascimento">Data de Nascimento</label>
-                <input name="nascimento" type="date" id="nascimento" class="form-control mb-3" value="<?php echo date("Y-m-d", strtotime($aluno->dataNascimento)); ?>">
-
-                <label for="genero">Genero</label>
-                <input name="genero" type="text" id="genero" class="form-control mb-3" value="<?php echo $aluno->genero; ?>">
-
-                <button class="btn btn-primary">Pronto</button>
+                <button class="btn btn-outline-dark w-100">Enviar</button>
             </form>
         </div>
         <div class="col"></div>
