--- a/Views/aluno/listar.phtml
+++ b/Views/aluno/listar.phtml
@@ -1,43 +1,55 @@
-<section class="mt-3 card card-body">
-    <h1>Gerenciar Alunos</h1>
-
-    <div class="mt-2">
-        <a href="/alunos/novo" class="btn btn-outline-dark btn-sm">Novo Aluno</a>
-
-        <a href="/alunos/relatorio" target="_blank" class="btn btn-outline-dark btn-sm">Gerar PDF</a>
+<section class="card card-body container-fluid">
+    <h1 class="text-center">Listar alunos:</h1>
+    <hr>
+    <div class="mt-2 w-100 d-flex justify-content-end">
+        <a href="/alunos/novo"class="btn btn-outline-primary me-1">Adicionar aluno</a>
+        <a href="/alunos/relatorio" target="_blank" class="btn btn-outline-primary">Gerar PDF</a>
     </div>
-
-    <table class="table table-striped table-hover mt-4">
+    
+    <table class="table table-striped table-hover table-bordered align-middle text-center mt-4">
+    <caption>Tabela de alunos</caption>
         <thead class="table-dark">
             <tr>
                 <th>#ID</th>
                 <th>Nome</th>
-                <th>Matricula</th>
                 <th>CPF</th>
+                <th>Matricula</th>
                 <th>Email</th>
+                <th>Status</th>
+                <th>Gênero</th>
+                <th>Data de Nascimento</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
             <?php
-                // if(isset($alunos) && sizeOf($alunos) > 0){
-                    foreach ($alunos ?? [] as $aluno) {
-                        echo "
-                            <tr>
-                                <td>{$aluno->id}</td>
-                                <td>{$aluno->nome}</td>
-                                <td>{$aluno->matricula}</td>
-                                <td>{$aluno->cpf}</td>
-                                <td>{$aluno->email}</td>
-                                <td>
-                                    <a href='/alunos/editar?id={$aluno->id}' class='btn btn-outline-warning btn-sm'>Editar</a>
-                                    <a href='/alunos/excluir?id={$aluno->id}' class='btn btn-outline-danger btn-sm'>Excluir</a>
-                                </td>
-                            </tr>
-                        ";
+                foreach($alunos ?? [] as $cadaAluno)
+                {
+                    $inverterData = array_reverse(explode('-',$cadaAluno->dataNascimento));
+                    $dataNascimento = implode('/',$inverterData);
+                    $estaMatriculado = 'Não matriculado';
+
+                    if($cadaAluno->status == 1){
+                        $estaMatriculado = 'Matriculado';
                     }
-                // }
+                    echo "
+                        <tr>
+                            <td class='fw-bold'>{$cadaAluno->id}</td>
+                            <td>{$cadaAluno->nome}</td>
+                            <td>{$cadaAluno->cpf}</td>
+                            <td>{$cadaAluno->matricula}</td>
+                            <td>{$cadaAluno->email}</td>
+                            <td>{$estaMatriculado}</td>
+                            <td>{$cadaAluno->genero}</td>
+                            <td>{$dataNascimento}</td>
+                            <td>
+                                <a href='/alunos/editar?id={$cadaAluno->id}' class='btn btn-warning'>Editar</a>
+                                <a href='/alunos/excluir?id={$cadaAluno->id}' class='btn btn-danger'>Excluir</a>
+                            </td>
+                        </tr>
+                    ";
+                }
             ?>
         </tbody>
     </table>
-</section>
+</section>  
