--- a/Views/curso/editar.phtml
+++ b/Views/curso/editar.phtml
@@ -1,29 +1,37 @@
-<section class="mt-3 card card-body">
-    <h1>Novo Curso</h1>
+<?php
+    $curso = $dados[0];
+?>
 
-    <div class="row">
+<section class="card card-body">
+    <h1>Editar curso</h1>
+
+    <div class="row ">
         <div class="col">
             <form action="" method="POST">
-                <label for="nome">Nome</label>
-                <input name="nome" type="text" id="nome" class="form-control mb-3">
-
-                <label for="descricao">Descrição</label>
-                <input name="descricao" type="text" id="email" class="form-control mb-3">
-
-                <label for="cargaHoraria">Carga Horária</label>
-                <input name="cargaHoraria" type="text" id="cpf" class="form-control mb-3">
-
-                <label for="categoria">Categoria</label>
-                <select name="categoria" class="form-control mb-3">
+                <label for="nome">Nome: </label>
+                <input name="nome" type="text" id="nome" class="form-control mb-3" value="<?php echo $curso->nome?>">
+                <label for="cargaHoraria">Carga horaria:</label>
+                <input name="cargaHoraria" type="number" id="cargaHoraria" class="form-control mb-3" value="<?php echo $curso->cargaHoraria?>">
+                <label for="descricao">Descrição: </label>
+                <input name="descricao" type="text" id="descricao" class="form-control mb-3" value="<?php echo $curso->descricao?>">
+                <label for="categoria">Categoria: </label>
+                <select name="categoria" id="categoria" class="form-select mb-3">
                     <?php
-                        foreach($categorias as $categoria){
+                    foreach($categorias as $cadaCategoria){
+                        if($curso->categoria_id == $cadaCategoria->id){
                             echo "
-                                <option value='{$categoria->id}'>{$categoria->nome}</option>
+                            <option value='{$cadaCategoria->id}' selected>{$cadaCategoria->nome}</option>
                             ";
                         }
+                        else{
+                            echo "
+                            <option value='{$cadaCategoria->id}'>{$cadaCategoria->nome}</option>
+                            ";
+                        }
+                    }
                     ?>
                 </select>
-                <button class="btn btn-primary">Pronto</button>
+                <button class="btn btn-outline-dark w-100">Enviar</button>
             </form>
         </div>
         <div class="col"></div>
