--- a/Views/professor/listar.phtml
+++ b/Views/professor/listar.phtml
@@ -1,36 +1,44 @@
-<section class="mt-3 card card-body">
-    <h1>Gerenciar Professores</h1>
-
-    <div class="mt-2">
-        <a href="/professores/novo" class="btn btn-outline-dark">Novo Professor</a>
+<section class="card card-body container-fluid ">
+    <h1 class="text-center">Listar professores:</h1>
+    <hr>
+    <div class="mt-2 w-100 d-flex justify-content-end">
+        <a href="alunos/novo"class="btn btn-outline-primary ">Adicionar professor</a>
     </div>
-
-    <table class="table table-striped table-hover mt-4">
+    
+    <table class="table table-striped table-hover table-bordered align-middle text-center mt-4">
+        <caption>Tabela de professores</caption>
         <thead class="table-dark">
             <tr>
                 <th>#ID</th>
                 <th>Nome</th>
                 <th>CPF</th>
+                <th>Endereço</th>
+                <th>Formação</th>
+                <th>Status</th>
+                <th>Horarios Disponiveis</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
             <?php
-                if(isset($professores) && sizeOf($professores) > 0){
-                    foreach ($professores as $professor) {
-                        echo "
-                            <tr>
-                                <td>{$professor->id}</td>
-                                <td>{$professor->nome}</td>
-                                <td>{$professor->cpf}</td>
-                                <td>
-                                    <a href='/professores/editar?id={$professor->id}' class='btn btn-warning'>Editar</a>
-                                    <a href='/professores/excluir?id={$professor->id}' class='btn btn-danger'>Deletar</a>
-                                </td>
-                            </tr>
+                foreach($professores ?? [] as $cadaProfessor)
+                {
+                    echo "
+                        <tr>
+                            <td class='fw-bold'>{$cadaProfessor->id}</td>
+                            <td>{$cadaProfessor->nome}</td>
+                            <td>{$cadaProfessor->cpf}</td>
+                            <td>{$cadaProfessor->endereco}</td>
+                            <td>{$cadaProfessor->formacao}</td>
+                            <td>{$cadaProfessor->status}</td>
+                            <td>{$cadaProfessor->horariosDisponiveis}</td>
+                            <td>
+                                <a class='btn btn-warning me-1'>Editar</button>
+                                <a href='excluir?id={$cadaProfessor->id}' class='btn btn-danger'>Excluir</button>
+                            </td>
+                        </tr>
                         ";
-                    }
-                }
+                    } 
             ?>
         </tbody>
     </table>
